--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
 <body>
     <div id="map">
     </div>
+    <div class="container" id="searchInput" style="width:18rem">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="inputQuery" placeholder="Location's Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                <option selected value="all">All Gym</option>
+                <option value="boxing">Boxing Gym</option>
+                <option value="climbing">Climbing Gym</option>
+                <option value="cycle">Cycle Studio</option>
+                <option value="dance">Dance Studio</option>
+                <option value="outdoor">Outdoor Gym</option>
+                <option value="pilates">Pilates</option>
+                <option value="yoga">Yoga</option>
+              </select>
+            <button class="btn btn-primary" id="searchBtn">Search</button>
+    </div>
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
         integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
