--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container" id="searchInput" style="width:18rem">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" id="inputQuery" placeholder="Location's Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <input type="text" class="form-control" id="inputQuery" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                 <option selected value="all">All Gym</option>
                 <option value="boxing">Boxing Gym</option>
@@ -34,6 +34,10 @@
                 <option value="yoga">Yoga</option>
               </select>
             <button class="btn btn-primary" id="searchBtn">Search</button>
+        </div>
+        <div id="resultDisplay">
+
+        </div>
     </div>
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
