--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="map">
     </div>
     <div class="container" id="searchInput" style="width:18rem">
-        <div class="input-group mb-3">
+        <div class="input-group mb-2">
             <input type="text" class="form-control" id="inputQuery" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                 <option selected value="all">All Gym</option>
@@ -35,8 +35,13 @@
               </select>
             <button class="btn btn-primary" id="searchBtn">Search</button>
         </div>
-        <div id="resultDisplay">
-
+        <div class="container">
+            <div class="d-flex justify-content-around">
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn" data-bs-toggle="button">🍜</button>
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="transportBtn" data-bs-toggle="button">🚊</button>
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn" data-bs-toggle="button">⛅</button>
+            </div>
+            <div id="resultDisplay"></div>
         </div>
     </div>
  
