--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div id="map">
     </div>
-    <div class="container" id="searchInput" style="width:18rem">
-        <div class="input-group mb-2">
+    <div class="container rounded" id="searchInput" style="width:18rem">
+        <div class="input-group mb-2 mt-3">
             <input type="text" class="form-control" id="inputQuery" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                 <option selected value="all">All Gym</option>
@@ -41,7 +41,7 @@
                 <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="transportBtn" data-bs-toggle="button">🚊</button>
                 <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn" data-bs-toggle="button">⛅</button>
             </div>
-            <div id="resultDisplay"></div>
+            <div id="resultDisplay" class="mb-3"></div>
         </div>
     </div>
  
