Weather toggle - WIP

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                 <option value="yoga">Yoga</option>
               </select>
             <button class="btn btn-primary" id="searchBtn">Search</button>
+            <button class="btn btn-primary m-0 px-1" id="toggleDisplayBtn">▼</button>
         </div>
-        <div class="container">
+        <div class="container collapse" id="toggleDisplay">
             <div class="d-flex justify-content-around">
                 <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn" data-bs-toggle="button">🍜</button>
                 <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="transportBtn" data-bs-toggle="button">🚊</button>
