--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
         crossorigin="" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -21,31 +21,38 @@
     <div id="map">
     </div>
     <div class="container rounded" id="searchInput" style="width:18rem">
-        <div class="input-group mb-2 mt-3">
-            <input type="text" class="form-control" id="inputQuery" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                <option selected value="all">All Gym</option>
-                <option value="boxing">Boxing Gym</option>
-                <option value="climbing">Climbing Gym</option>
-                <option value="cycle">Cycle Studio</option>
-                <option value="dance">Dance Studio</option>
-                <option value="outdoor">Outdoor Gym</option>
-                <option value="pilates">Pilates</option>
-                <option value="yoga">Yoga</option>
-              </select>
-            <button class="btn btn-primary" id="searchBtn">Search</button>
-            <button class="btn btn-primary m-0 px-1" id="toggleDisplayBtn">▼</button>
+        <div class="d-flex flex-row align-items-center">
+            <div class="input-group mb-2 mt-3">
+                <input type="text" class="form-control" id="inputQuery" placeholder="Name"
+                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                    <option selected value="all">All Gym</option>
+                    <option value="boxing">Boxing Gym</option>
+                    <option value="climbing">Climbing Gym</option>
+                    <option value="cycle">Cycle Studio</option>
+                    <option value="dance">Dance Studio</option>
+                    <option value="outdoor">Outdoor Gym</option>
+                    <option value="pilates">Pilates</option>
+                    <option value="yoga">Yoga</option>
+                </select>
+                <button class="btn btn-primary" id="searchBtn">Search</button>
+            </div>
+            <p class="mt-4 ms-2" id="toggleDisplayBtn">▼</p>
         </div>
         <div class="container collapse" id="toggleDisplay">
             <div class="d-flex justify-content-around">
-                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn" data-bs-toggle="button">🍜</button>
-                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="transportBtn" data-bs-toggle="button">🚊</button>
-                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn" data-bs-toggle="button">⛅</button>
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn"
+                    data-bs-toggle="button">🍜</button>
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="transportBtn"
+                    data-bs-toggle="button">🚊</button>
+                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn"
+                    data-bs-toggle="button">⛅</button>
             </div>
+            <div id="weatherDisplay" class="mb-2"></div>
             <div id="resultDisplay" class="mb-3"></div>
         </div>
     </div>
- 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
         integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
