--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
         </div>
     </div>
     <div>
-        <button type="button" id="loginBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Login
+        <button type="button" id="loginBtn" class="btn btn-primary" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">
+            Login
         </button>
         <button type="button" id="loggedinBtn" class="btn btn-primary" data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop"></button>
+            data-bs-target="#exampleModal"></button>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Login/Create Account</h1>
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Account</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -98,20 +99,25 @@
                             <label>Enter Password: </label>
                             <input id="createPassword" type="password" class="form-control mb-2">
 
-                            <label id="createRePassword">Reenter Password: </label>
-                            <input type="password" class="form-control mb-2">
+                            <label>Your Name: </label>
+                            <input id="createName" type="text" class="form-control mb-2">
 
-                            <label id="createHeight">Your Height: </label>
-                            <input type="text" class="form-control mb-2">
+                            <label>Your Height(M): </label>
+                            <input id="createHeight" type="number" class="form-control mb-2">
 
-                            <label id="createWeight">Your Weight: </label>
-                            <input type="text" class="form-control mb-2">
+                            <label>Your Weight(KG): </label>
+                            <input id="createWeight" type="number" class="form-control mb-2">
                         </div>
                         <div id="accountBody"></div>
+                        <div id="chartDiv">
+                            <div id="chart"></div>
+                        </div>
                     </div>
                     <div class="modal-footer d-flex justify-content-around">
                         <button type="button" class="btn btn-primary" id="createAccountBtn">Create Account</button>
-                        <button type="button" class="btn btn-primary" id="loginAccountBtn" >Login</button>
+                        <button type="button" class="btn btn-primary" id="newAccountBtn">Submit</button>
+                        <button type="button" class="btn btn-primary" id="loginAccountBtn">Login</button>
+                        <button type="button" class="btn btn-primary" id="logoutAccountBtn">Logout</button>
                     </div>
                 </div>
             </div>
@@ -128,6 +134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
