--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     </div>
     <div id="map">
     </div>
-    <div class="container rounded" id="searchInput" style="width:18rem">
+    <div id="logo"><img id="imgLogo"src="img/icon/LOGO.png"/></div>
+    <div class="container rounded" id="searchInput">
         <div class="d-flex flex-row align-items-center">
             <div class="input-group mb-2 mt-3">
                 <input type="text" class="form-control" id="inputQuery" placeholder="Name"
                     aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                <select class="form-select" id="floatingSelect" aria-label="Floating label select example"style="max-width:130px">
                     <option selected value="all">All Gym</option>
                     <option value="boxing">Boxing Gym</option>
                     <option value="climbing">Climbing Gym</option>
@@ -61,9 +62,9 @@
         </div>
         <div class="container collapse" id="toggleDisplay">
             <div class="d-flex justify-content-around">
-                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn"
+                <button class="btn btn-outline-warning p-1 m-0 mb-2 rounded-circle fs-3" id="foodBtn"
                     data-bs-toggle="button">🍜</button>
-                <button class="btn btn-outline-success p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn"
+                <button class="btn btn-outline-warning p-1 m-0 mb-2 rounded-circle fs-3" id="weatherBtn"
                     data-bs-toggle="button">⛅</button>
             </div>
             <div id="weatherDisplay" class="mb-2"></div>
